--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Suhail Pallath Sulaiman</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/myphoto.gif" alt="">
         <h1 class="text-uppercase mb-0">Suhail Pallath Sulaiman</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">MS Robotics Northwestern University</h2>
@@ -93,40 +93,40 @@
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <i class="fa fa-search-plus fa-6x">Artificial Intelligence</i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+              <img class="img-fluid" src="img/portfolio/ai.jpg" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <i class="fa fa-search-plus fa-6x">Machine Learning</i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
+              <img class="img-fluid" src="img/portfolio/ml.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <i class="fa fa-search-plus fa-6x">Robot Manipulation</i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+              <img class="img-fluid" src="img/portfolio/kuka.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
+                  <i class="fa fa-search-plus fa-6x">Machine Dynamics</i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
+              <img class="img-fluid" src="img/portfolio/md.png" alt="">
             </a>
           </div>
         </div>
@@ -237,7 +237,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/robosuhail" target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle" >
+                <a href="https://github.com/suhailpallathsulaiman" target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle" >
                   <i class="fa fa-fw fa-github"></i>
                 </a>
               </li>
@@ -279,8 +279,8 @@
               <h2 class="text-secondary text-uppercase mb-0">Cat excavator tooth detection</h2>
               <hr class="star-dark mb-5">
 <!--               <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
-              <p class="mb-5">This project is an attempt to train a custom model to detect and locate teeth in the excavator bucket. Tensorflow machine learning library from Google was used to train the custom model along with OpenCV. The model was trained with just 100 images for this project, and so the accuracy of detection can be increased by increasing the number of training images and fine tuning the configuration file between accuracy and speed. The code can be found <a href="https://github.com/robosuhail/cat_excavator_tooth_detection" target="blank"> here</a>
-              <iframe width="700" height="500" src="https://www.youtube.com/embed/RMCaAgLhMFE"></iframe>
+              <p class="mb-5">This project is an attempt to train a custom model to detect and locate teeth in the excavator bucket. Tensorflow machine learning library from Google was used to train the custom model along with OpenCV. The model was trained with just 100 images for this project, and so the accuracy of detection can be increased by increasing the number of training images and fine tuning the configuration file between accuracy and speed. The code can be found <a href="https://github.com/SuhailPallathSulaiman/models" target="blank"> here</a>
+              <iframe width="700" height="500" src="https://www.youtube.com/embed/p4vXwedmfDM"></iframe>
 
                 <hr>
 
@@ -293,6 +293,7 @@
 
                 <hr>
 
+              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
             </div>
@@ -381,10 +382,11 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Machine learning</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <iframe width="700" height="500" src="https://www.youtube.com/embed/1HfDNdneqYw"></iframe>
+
+              <p class="mb-5">Work in progress.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -403,10 +405,15 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Robot manipulation</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+<!--               <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt=""> -->
+              <iframe width="700" height="500" src="https://www.youtube.com/embed/voewsQqxcLU"></iframe>
+              <p class="mb-5">This is the final project for ME 449 Robotic Manipulation. The objective of the project was to write a robot simulator to test the kinematic task-space feedforward plus feedback control law tracking the end effector trajectory defined by a specific path and time scaling.</p>
+              <p class="mb-5">The program take the trajectory and initial configuration of the robot as input, in addition to control gains</p>
+              <img class="img-fluid mb-5" src="img/Others/kp20_ki501.gif" alt="">
+              <img class="img-fluid mb-5" src="img/Others/kpki30.gif" alt="">
+
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -425,10 +432,17 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Machine Dynamics</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+<!--               <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt=""> -->
+              <h4 class="text-secondary text-uppercase mb-0">This is a collection of projects done in Mathematica as a part of ME 314</h4>
+              <hr>
+              <p class="mb-5">Simulation of a biped doing splits</p>
+              <iframe width="700" height="500" src="https://www.youtube.com/embed/H2gvwRLc1ns"></iframe>
+                <hr>
+              <p class="mb-5">Simulation of pinball</p>
+              <iframe width="700" height="500" src="https://www.youtube.com/embed/gBCiNQ8QrY8"></iframe>
+
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
