Change in primary and secondary colors

--- a/index.html
+++ b/index.html
@@ -53,14 +53,18 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead bg-primary text-white text-center">
-      <div class="container">
+    <header background="img/portfolio/safe.png" class="masthead bg-secondary text-white text-center">
+
+      <div class="container" >
+      <body >
         <img class="img-fluid mb-5 d-block mx-auto" src="img/myphoto.gif" alt="">
         <h1 class="text-uppercase mb-0">Suhail Pallath Sulaiman</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">MS Robotics Northwestern University</h2>
         <h2 class="font-weight-light mb-0">BTech Mechanical Mahatma Gandhi University</h2>
+      </body>
       </div>
+
     </header>
 
     <!-- Portfolio Grid Section -->
@@ -134,7 +138,7 @@
     </section>
 
     <!-- About Section -->
-    <section class="bg-primary text-white mb-0" id="about">
+    <section class="bg-secondary text-white mb-0" id="about">
       <div class="container">
         <h2 class="text-center text-uppercase text-white">About Me</h2>
         <hr class="star-light mb-5">
@@ -275,13 +279,14 @@
         </a>
         <div class="container text-center">
           <div class="row">
-            <div class="col-lg-8 mx-auto">
+            <div class="col-lg-12 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Cat excavator tooth detection</h2>
               <hr class="star-dark mb-5">
 <!--               <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt=""> -->
               <p class="mb-5">This project is an attempt to train a custom model to detect and locate teeth in the excavator bucket. Tensorflow machine learning library from Google was used to train the custom model along with OpenCV. The model was trained with just 100 images for this project, and so the accuracy of detection can be increased by increasing the number of training images and fine tuning the configuration file between accuracy and speed. The code can be found <a href="https://github.com/SuhailPallathSulaiman/models" target="blank"> here</a>
-              <iframe width="700" height="500" src="https://www.youtube.com/embed/p4vXwedmfDM"></iframe>
 
+
+              <iframe width="700" height="500" src="https://www.youtube.com/embed/p4vXwedmfDM"></iframe>
                 <hr>
 
                 <h3 align="left">Skills Involved</h3>
