--- a/index.html
+++ b/index.html
@@ -153,43 +153,79 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 		<div class="container">
 
 			<div class="col-md-12 skills-left">
-                <h3 color"white" class="agileits-title">My Work</h3>
+                <h3  class="agileits-title">My Work</h3>
 
                                         <div class="w3_tab_img">
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/g1.jpg">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/g1.jpg" alt=" " class="img-responsive" />
+                                    <a class="cm-overlay" href="images/hopper.png">
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/hopper.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
                                 </div>
                                 <div class="agile-gallery-info">
-                                    <h5>My project</h5>
-                                    <p>Consectetur</p>
+                                    <h5>Single legged planar hopping robot</h5>
+                                    <!-- <p>Consectetur</p> -->
                                 </div>
                             </div>
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/g2.jpg">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/g2.jpg" alt=" " class="img-responsive" />
+                                    <a class="cm-overlay" href="images/caterpillar.png">
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/caterpillar.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
                                 </div>
                                 <div class="agile-gallery-info">
-                                    <h5>My project</h5>
-                                    <p>Adipiscing </p>
+                                    <h5>Excavator tooth detection</h5>
+                                    <!-- <p>Consectetur</p> -->
                                 </div>
                             </div>
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/g3.jpg">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/g3.jpg" alt=" " class="img-responsive" />
+                                    <a class="cm-overlay" href="images/baxter.jpg">
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/baxter.jpg" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
                                 </div>
                                 <div class="agile-gallery-info">
-                                    <h5>My project</h5>
-                                    <p>Ullamcorper </p>
+                                    <h5>Baxter Constrained motion</h5>
+                                    <!-- <p>Adipiscing </p> -->
+                                </div>
+                            </div>
+                            <div class="col-sm-3 w3_tab_img_left">
+                                <div class="demo">
+                                    <a class="cm-overlay" href="images/ml.png">
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/ml.png" alt=" " class="img-responsive" />
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div class="agile-gallery-info">
+                                    <h5>Tensorflow object detection</h5>
+                                   <!--  <p>Ullamcorper </p> -->
+                                </div>
+                            </div>
+                            <div class="col-sm-3 w3_tab_img_left">
+                                <div class="demo">
+                                    <a class="cm-overlay" href="images/md.jpg">
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/md.png" alt=" " class="img-responsive" />
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div class="agile-gallery-info">
+                                    <h5>Machine Dynamics Projects</h5>
+                                   <!--  <p>Ullamcorper </p> -->
+                                </div>
+                            </div>
+                            <div class="col-sm-3 w3_tab_img_left">
+                                <div class="demo">
+                                    <a class="cm-overlay" href="images/kuka.png">
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/kuka.png" alt=" " class="img-responsive" />
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div class="agile-gallery-info">
+                                    <h5>Robot Manipulation</h5>
+                                   <!--  <p>Ullamcorper </p> -->
                                 </div>
                             </div>
                             </div>
