Updated projects and resume

--- a/index.html
+++ b/index.html
@@ -156,6 +156,21 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                 <h3  class="agileits-title">My Work</h3>
 
                                         <div class="w3_tab_img">
+
+
+                            <div class="col-sm-3 w3_tab_img_left">
+                                <div class="demo">
+                                    <a class="cm-overlay" href="images/hopper.png">
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/dataset.png" alt=" " class="img-responsive" />
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div class="agile-gallery-info">
+                                    <h5>Synthetic Dataset generation for ML</h5>
+                                    <!-- <p>Consectetur</p> -->
+                                </div>
+                            </div>
+
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
                                     <a class="cm-overlay" href="images/hopper.png">
@@ -164,7 +179,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                                     </a>
                                 </div>
                                 <div class="agile-gallery-info">
-                                    <h5>Single legged planar hopping robot</h5>
+                                    <h5>Single legged hopping robot</h5>
                                     <!-- <p>Consectetur</p> -->
                                 </div>
                             </div>
@@ -177,6 +192,19 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                                 </div>
                                 <div class="agile-gallery-info">
                                     <h5>Excavator tooth detection</h5>
+                                    <!-- <p>Consectetur</p> -->
+                                </div>
+                            </div>
+
+                            <div class="col-sm-3 w3_tab_img_left">
+                                <div class="demo">
+                                    <a class="cm-overlay" href="images/quad.png">
+                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/quad.png" alt=" " class="img-responsive" />
+                                        </figure>
+                                    </a>
+                                </div>
+                                <div class="agile-gallery-info">
+                                    <h5>Autonomous Quadrotor design</h5>
                                     <!-- <p>Consectetur</p> -->
                                 </div>
                             </div>
@@ -212,7 +240,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                                     </a>
                                 </div>
                                 <div class="agile-gallery-info">
-                                    <h5>Machine Dynamics Projects</h5>
+                                    <h5>Machine Dynamics</h5>
                                    <!--  <p>Ullamcorper </p> -->
                                 </div>
                             </div>
@@ -429,7 +457,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 									<p>Pulvinar</p>
 								</div>
 							</div>
-							<div class="col-sm-3 w3_tab_img_left">
+							<div height="10px" class="col-sm-3 w3_tab_img_left">
 								<div class="demo">
 									<a class="cm-overlay" href="images/g3.jpg">
 										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/g3.jpg" alt=" " class="img-responsive">
@@ -543,10 +571,10 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 						</div>
 						<div class="col-md-8 col-sm-8 col-xs-8 contact-text-agileinfo">
 							<ul class="w3-links">
-								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.facebook.com/suhail.p.sulaiman"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://github.com/suhailpallathsulaiman"><i class="fa fa-github"></i></a></li>
+								<li><a href="https://www.linkedin.com/in/suhailpallathsulaiman/"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="https://suhailpallathsulaiman.github.io/Resume.pdf"><i class="fa fa-file-pdf-o"></i></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"></div>
