Updated resume and index

--- a/index.html
+++ b/index.html
@@ -102,9 +102,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <h2 class="agileits-title" >Mechanical Engineer  <span> + </span>Developer <span>= </span> Roboticist</h2>
                 <br>
 
-				<p>I am mechanical engineering graduate with 3 years of experience as a developer. My passion in robotics is just a childhood fantasy turned into reality. I hope to combine my mechanical and programming expertise along with the skills I acquire from my Masters program to make my own contribution to the exciting field of robotics.</p><br>
+				<p>I am mechanical engineering graduate with 3 years of experience as a developer. My passion in robotics is just a childhood fantasy turned into reality. I hope to combine my mechanical and programming expertise along with the skills I acquire from my Masters program to make my own contribution to the exciting field of robotics. </p><br>
+
+
 <p>
-I am currently pursuing Master of Science in Robotics at Northwestern University. My interest areas are Computer Vision, Machine learning, Artificial intelligence and bioinspired Robotics.</p>
+I am currently pursuing Master of Science in Robotics at Northwestern University. My focus areas are Computer Vision, Machine learning, Artificial intelligence and bioinspired Robotics.</p>
 			</div>
 			<a href="#contact" class="wthree- about-link scroll">hire me</a>
 		</div>
