Updated resume and index

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<nav>
 							<a href="#home" class="active scroll">Home</a>
 							<a href="#about" class="scroll">About Me</a>
-							<a href="#skills" class="scroll">Skills</a>
-							<a href="#gallery" class="scroll">My Work</a>
-							<a href="#services" class="scroll">Services</a>
+							<a href="#skills" class="scroll">My Work</a>
+							<a href="#gallery" class="scroll">Skills</a>
 							<a href="#contact" class="scroll">Contact</a>
 						</nav>
 						<script>
@@ -279,7 +278,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 
                                 </div>
 								<div class="demo">
-									<a class="cm-overlay" href="images/g1.jpg">
+									<a>
 										<figure class="imghvr-shutter-in-out-diag-2"><img height="10px" src="images/languages.png" alt=" " class="img-responsive" />
 										</figure>
 									</a>
@@ -291,7 +290,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                                     <h5>Libraries and Packages</h5>
                                 </div>
 								<div class="demo">
-									<a class="cm-overlay" href="images/g2.jpg">
+									<a>
 										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/libraries.png" alt=" " class="img-responsive" />
 										</figure>
 									</a>
@@ -303,7 +302,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                                     <h5>Design Software</h5>
                                 </div>
 								<div class="demo">
-									<a class="cm-overlay" href="images/g3.jpg">
+									<a>
 										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/design.png" alt=" " class="img-responsive" />
 										</figure>
 									</a>
@@ -315,7 +314,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                                     <h5>Version Control</h5>
                                 </div>
 								<div class="demo">
-									<a class="cm-overlay" href="images/g4.jpg">
+									<a>
 										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/version.png" alt=" " class="img-responsive" />
 										</figure>
 									</a>
@@ -327,7 +326,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                                     <h5>IDE</h5>
                                 </div>
 								<div class="demo">
-									<a class="cm-overlay" href="images/g5.jpg">
+									<a>
 										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/IDE.png" alt=" " class="img-responsive" />
 										</figure>
 									</a>
@@ -339,7 +338,8 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                                     <h5>Database</h5>
                                 </div>
 								<div class="demo">
-									<a class="cm-overlay" href="images/g6.jpg">
+									<!-- <a class="cm-overlay" href="images/g6.jpg"> -->
+										<a>
 										<figure class="imghvr-shutter-in-out-diag-2"><img src="images/database.png" alt=" " class="img-responsive" />
 										</figure>
 									</a>
@@ -486,53 +486,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 			});
 		</script>
 	</div>
-	<!-- //menu -->
-	<!-- services -->
-<!-- 	<div class="w3ls-section services" id="services">
-		<div class="container">
-			<h3 class="agileits-title text-center">services</h3>
-			<div class="services-w3ls-row agileits-w3layouts service1 text-center">
-				<h5>web design</h5>
-				<p>Tenetur a sapiente itaque earum rerum hic delectus maiores alias phasellus.</p>
-				<div class="s-top">
-					<span class="fa fa-laptop" aria-hidden="true"></span>
-				</div>
-			</div>
-			<div class="services-w3ls-row agileits-w3layouts middlegrid-w3ls">
-				<div class="col-md-4 services-grid agileits-w3layouts service2">
-					<div class="col-md-10 w3ls-sub-text">
-						<h5>ui design</h5>
-						<p>Tenetur a sapiente itaque earum rerum hic delectus maiores alias phasellus.</p>
-					</div>
-					<div class="col-md-2 sub-icon">
-						<span class="fa fa-caret-square-o-up" aria-hidden="true"></span>
-					</div>
-				</div>
-				<div class="col-md-4 services-grid img-agileits">
-					<img src="images/services.jpg" class="img-responsive" alt="" />
-				</div>
-				<div class="col-md-4 services-grid agileits-w3layouts service3">
-					<div class="col-md-2 sub-icon">
-						<span class="fa fa-grav" aria-hidden="true"></span>
-					</div>
-					<div class="col-md-10 w3ls-sub-text">
-						<h5>graphic design</h5>
-						<p>Tenetur a sapiente itaque earum rerum hic delectus maiores alias phasellus.</p>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="services-w3ls-row agileits-w3layouts service4">
-				<div class="s-top">
-					<span class="fa fa-adjust" aria-hidden="true"></span>
-				</div>
-				<h5>seo</h5>
-				<p>Tenetur a sapiente itaque earum rerum hic delectus maiores alias phasellus.</p>
-			</div>
-		</div>
-	</div>
- -->	<!-- //services -->
-	<!-- contact -->
+
 	<div class="contact-w3-agileits w3ls-section" id="contact">
 		<div class="container">
 			<h3 class="agileits-title cont-w3l">Feel free to contact me</h3>
