Added project descriptions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Designer a Personal Category Bootstrap Responsive Template | Home :: w3layouts</title>
+	<title>Suhail Pallath Sulaiman</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="Designer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
@@ -186,7 +186,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                             </div>
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/caterpillar.png">
+                                    <a href="excavator.html">
                                         <figure class="imghvr-shutter-in-out-diag-2"><img src="images/caterpillar.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
@@ -211,7 +211,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                             </div>
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/baxter.jpg">
+                                    <a href="baxter.html">
                                         <figure class="imghvr-shutter-in-out-diag-2"><img src="images/baxter.jpg" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
@@ -223,8 +223,8 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                             </div>
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/ml.png">
-                                        <figure class="imghvr-shutter-in-out-diag-2"><img src="images/ml.png" alt=" " class="img-responsive" />
+                                    <a href="ml.html">
+                                        <figure ><img src="images/ml.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
                                 </div>
@@ -235,7 +235,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                             </div>
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/md.jpg">
+                                    <a href="md.html">
                                         <figure class="imghvr-shutter-in-out-diag-2"><img src="images/md.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
@@ -247,7 +247,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
                             </div>
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/kuka.png">
+                                    <a  href="rm.html">
                                         <figure class="imghvr-shutter-in-out-diag-2"><img src="images/kuka.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
@@ -557,6 +557,15 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 			</div>
 		</div>
 	</div>
+
+
+
+
+
+
+
+
+
 	<!-- //contact -->
 <!-- 	<div class="agileits_w3layouts-footer">
 		<p>© 2017 Designer. All rights reserved | Design by <a href="http://w3layouts.com"> W3layouts.</a></p>
@@ -601,3 +610,5 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 	<script src="js/bootstrap.js"></script>
 </body>
 </html>
+
+
