Added remaining projects

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <h2><br></h2>
 
 					<p class="w3ls-p">Master of Science Robotics candidate at Northwestern University</p>
-					<a href="#about" class="buy btn-wayra scroll">Explore my work</a>
+					<a href="#skills" class="buy btn-wayra scroll">Explore my work</a>
 				</div>
 			</div>
 		</div>
@@ -128,10 +128,10 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 			<div class="col-md-6 col-sm-6 ab1 agileits-about-grid2">
 				<span class="fa fa-graduation-cap  wthree-title-list" aria-hidden="true"></span>
 				<h4 class="agileinfo-head">education</h4>
-				<h5>MS Robotics</h5>
+				<h5>Master of Sciencs in Robotics</h5>
 				<p>Northwestern University.</p>
-				<h5>Mahatma Gandhi University</h5>
-				<p>Ncididunt ut labore et t enim ad minim.</p>
+				<h5>Bachelor of Technology in Mechanical Engineering</h5>
+				<p>Mahatma Gandhi University</p>
 <!-- 				<h5>High School</h5>
 				<p>Ncididunt ut labore et t enim ad minim.</p> -->
 			</div>
@@ -161,7 +161,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/hopper.png">
+                                    <a href="dataset.html">
                                         <figure class="imghvr-shutter-in-out-diag-2"><img src="images/dataset.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
@@ -174,7 +174,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/hopper.png">
+                                    <a href="hopper.html">
                                         <figure class="imghvr-shutter-in-out-diag-2"><img src="images/hopper.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
@@ -199,7 +199,7 @@ I am currently pursuing Master of Science in Robotics at Northwestern University
 
                             <div class="col-sm-3 w3_tab_img_left">
                                 <div class="demo">
-                                    <a class="cm-overlay" href="images/quad.png">
+                                    <a href="quad.html">
                                         <figure class="imghvr-shutter-in-out-diag-2"><img src="images/quad.png" alt=" " class="img-responsive" />
                                         </figure>
                                     </a>
