updated few pages

--- a/rm.html
+++ b/rm.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>SuhailPallathSulaiman Excavator tooth detection using tensorflow</title>
+	<title>Kuka YouBot manipulation</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="Designer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
@@ -86,7 +86,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- about -->
 	<div class="agile-about w3ls-section text-left" id="about">
 		<div class="container">
-			<h3 class="agileits-title">Excavator tooth detection using Machine Learning</h3>
+			<h3 class="agileits-title">Kuka YouBot manipulation</h3>
 			<div class="agileits-about-grid">
 
                 <br>
