--- a/md.html
+++ b/md.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>SuhailPallathSulaiman Excavator tooth detection using tensorflow</title>
+	<title>Machine Dynamics</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="Designer Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
@@ -86,15 +86,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- about -->
 	<div class="agile-about w3ls-section text-left" id="about">
 		<div class="container">
-			<h3 class="agileits-title">Excavator tooth detection using Machine Learning</h3>
+			<h3 class="agileits-title">Machine dynamics project</h3>
 			<div class="agileits-about-grid">
 
                 <br>
 
-				<p>This is the final project for ME 449 Robotic Manipulation. The objective of the project was to write a robot simulator to test the kinematic task-space feedforward plus feedback control law tracking the end effector trajectory defined by a specific path and time scaling.</p>
+				<p>This is a collection of projects done in Mathematica as a part of ME 314 Machine Dynamics.</p>
               <p >The program take the trajectory and initial configuration of the robot as input, in addition to control gains</p>
              <br>
-             <h4 class="text-secondary text-uppercase mb-0">This is a collection of projects done in Mathematica as a part of ME 314</h4>
+<!--              <h4 class="text-secondary text-uppercase mb-0">This is a collection of projects done in Mathematica as a part of ME 314</h4> -->
               <hr>
               <p class="mb-5">Simulation of a biped doing splits</p>
               <iframe width="700" height="500" src="https://www.youtube.com/embed/H2gvwRLc1ns"></iframe>
@@ -102,21 +102,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               <p class="mb-5">Simulation of pinball</p>
               <iframe width="700" height="500" src="https://www.youtube.com/embed/gBCiNQ8QrY8"></iframe>
 
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
 
 
 
- <iframe class="col-lg-12 col-sm-12" height="500" src="https://www.youtube.com/embed/voewsQqxcLU"></iframe>
 
-              <img class="img-responsive" src="img/Others/kp20_ki501.gif" alt="">
-              <img class="img-responsive" src="img/Others/kpki30.gif" alt="">
-
-                <hr>
-                <div>
-
-                <br>
-                </div>
-                <br>
 
                 <h3 align="left">Skills Involved</h3>
                 <ul>
